<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pish.tttdenysjonathan.MainActivity"
    android:orientation="vertical"
    android:background="@color/bluegray">

    <TableLayout
        android:id="@+id/gameGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginTop="30dp">

<TableRow
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:gravity="center">

    <ImageButton
        android:id="@+id/btn_1_1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="0"
        android:layout_column="1"
        android:src="@drawable/emptysquare"
        android:onClick="onClick"/>

    <ImageButton
        android:id="@+id/btn_1_2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="0"
        android:layout_column="2"
        android:src="@drawable/emptysquare"
        android:onClick="onClick"/>

    <ImageButton
        android:id="@+id/btn_1_3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="0"
        android:layout_column="3"
        android:src="@drawable/emptysquare"
        android:onClick="onClick"/>
</TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_2_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_weight="0"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/emptysquare"
            android:onClick="onClick"/>

        <ImageButton
            android:id="@+id/btn_2_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_weight="0"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/emptysquare"
            android:onClick="onClick"/>

        <ImageButton
            android:id="@+id/btn_2_3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="3"
            android:layout_weight="0"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/emptysquare"
            android:onClick="onClick"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_3_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_weight="0"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/emptysquare"
            android:onClick="onClick"/>

        <ImageButton
            android:id="@+id/btn_3_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_weight="0"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/emptysquare"
            android:onClick="onClick"/>

        <ImageButton
            android:id="@+id/btn_3_3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="3"
            android:layout_weight="0"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/emptysquare"
            android:onClick="onClick"/>
    </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/playBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/zeroButton"
            android:layout_margin="5dp"
            android:background="@color/orange"
            android:onClick="zeroAll"
            />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/resetButton"
            android:layout_margin="5dp"
            android:background="@color/orange"
            android:onClick="resetGame"
        />
        <Button
            android:id="@+id/aboutBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/aboutButton"
            android:layout_margin="5dp"
            android:background="@color/orange"
            android:onClick="showAbout"
        />
        <Button
            android:id="@+id/exitBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/scoresButton"
            android:layout_margin="5dp"
            android:background="@color/orange"
            android:onClick="exitGame"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/oneplayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/oneplayer"
            android:layout_margin="5dp"
            android:onClick="startGame"
            />

        <Button
            android:id="@+id/multiplayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/multiplayer"
            android:layout_margin="5dp"
            android:onClick="startGame"
            />
    </LinearLayout>



</LinearLayout>
